Alteração de semãntica na landingpage; criação de arquivo de configuração

--- a/landingpage.html
+++ b/landingpage.html
@@ -1,4 +1,5 @@
 
-<h3>Minha primeira mudança...</h3>
+<h3>Minha primeira mudança...</h3>..
 <h3>Minha primeira real alteração...</h3>
 Trecho 123456789
+[ 1ª Alteração na semãntica. ]
