--- a/landingpage.html
+++ b/landingpage.html
@@ -3,3 +3,5 @@
 <h3>Minha primeira real alteração...</h3>
 Trecho 123456789
 [ 1ª Alteração na semãntica. ]
+[ 2ª Alteração na semãntica. ]
+[ 3ª Alteração na semãntica. ]
