manifesto e update lp

--- a/landingpage.html
+++ b/landingpage.html
@@ -5,3 +5,4 @@ Trecho 123456789
 [ 1ª Alteração na semãntica. ]
 [ 2ª Alteração na semãntica. ]
 [ 3ª Alteração na semãntica. ]
+[ 4ª Alteração no sábado de carnaval ]
